keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-svc
  namespace: keycloak
spec:
  ports:
  - port: 8080
     targetPort: 8080
  selector:
    app: keycloak
